--- a/src/pages/home/components/WhatWeDo/style.module.scss
+++ b/src/pages/home/components/WhatWeDo/style.module.scss
@@ -53,7 +53,7 @@
         border: 2px solid $black;
         border-radius: 5rem;
         background: transparent;
-        img {
+        svg {
           position: absolute;
           left: -5rem;
           transform: translateY(-50%);
