--- a/src/pages/contact/components/ContactForm/style.module.scss
+++ b/src/pages/contact/components/ContactForm/style.module.scss
@@ -6,16 +6,22 @@
     max-width: 800px;
     width: 100%;
     margin: 0 auto;
+    .row {
+      margin-bottom: 2rem;
+      position: relative;
+    }
     .cols2, .cols4 {
       display: grid;
       gap: 2rem;
-      margin-bottom: 2rem;
     }
     .cols2 {
       grid-template-columns: repeat(2, minmax(0, 1fr));
     }
     .cols4 {
       grid-template-columns: repeat(4, minmax(0, 1fr));
+    }
+    .field {
+      position: relative;
     }
     h4 {
       margin-bottom: 2rem;
@@ -74,6 +80,14 @@
       font-family: $spaceGrotesk;;
       color: $white;
       background: $yellow;
+    }
+    .error {
+      margin-top: .25rem;
+      position: absolute;
+      bottom: -1rem;
+      left: 0;
+      font-size: .75rem;
+      color: $red;
     }
   }
 }
