main - added about page and initial fix for slider

--- a/src/pages/contact/components/ContactForm/style.module.scss
+++ b/src/pages/contact/components/ContactForm/style.module.scss
@@ -35,11 +35,15 @@
       background: transparent;
     }
     button {
+      transition: all .5s;
       &:hover,
       &:active {
-        transition: all .5s;
         background: $black;
         color: $white;
+      }
+      &.active {
+        color: $white;
+        background: $black;
       }
     }
     input,textarea {
