--- a/src/pages/about/components/ImageSlider/style.module.scss
+++ b/src/pages/about/components/ImageSlider/style.module.scss
@@ -1,27 +1,14 @@
 @import '@/assets/scss/variables';
 
 .imageSlider {
-  width: 100%;
+  width: calc(100% + 9rem);
+  height: 380px;
   margin: 0 -4.5rem 0;
-  .slider {
-    display: flex;
-    align-items: center;
-    gap: 2rem;
-    overflow-x: auto;
-    .card {
-      transition: all .5;
-      min-width: calc(30% + 2rem);
-      height: 300px;
-      &.active {
-        min-width: 40%;
-        height: 370px;
-      }
-      img {
-        height: 100%;
-        width: 100%;
-        object-fit: cover;
-        object-position: center;
-      }
-    }
+  position: relative;
+   
+  .sliderContainer {
+    position: absolute;
+    left: 0;
+    right: 0;
   }
 }
