main - fix about page slider

--- a/src/assets/scss/variables.scss
+++ b/src/assets/scss/variables.scss
@@ -5,6 +5,7 @@ $yellow: #FFD035;
 $gray: #A8A8A8;
 $white: #FFFFFF;
 $pink: #FFA9D9;
+$green: #4DD78A;
 
 $dmSans: 'DM Sans', sans-serif;
 $openSans: 'Open Sans', sans-serif;
