--- a/src/pages/works/components/Hero/style.module.scss
+++ b/src/pages/works/components/Hero/style.module.scss
@@ -11,6 +11,7 @@
     color: $black;
   }
   h1 {
+    position: relative;
     max-width: 70%;
     font-weight: 400;
     font-size: 6rem;
@@ -23,9 +24,19 @@
       }
     }
   }
+  .art2 {
+    position: absolute;
+    top: -3rem;
+    right: 3rem;
+  }
   .art10 {
     position: absolute;
     top: -10rem;
     right: 10rem;
+  }
+  .art11 {
+    position: absolute;
+    top: -10rem;
+    right: 13rem;
   }
 }
