--- a/src/pages/about/components/Hero/style.module.scss
+++ b/src/pages/about/components/Hero/style.module.scss
@@ -1,19 +1,10 @@
 @import '@/assets/scss/variables';
+@import '@/assets/scss/mixins';
 
 .hero {
   margin: 18rem auto 0;
-  position: relative;
-  h2 {
-    margin: 0 auto 2rem;
-    font-size: 2rem;
-    font-weight: 700;
-    font-style: italic;
-    color: $black;
-  }
+  @include hero;
   h1 {
-    font-weight: 400;
-    font-size: 6rem;
-    font-family: $spaceGrotesk;
     span {
       display: inline-grid;
       color: $red;
@@ -23,8 +14,6 @@
     }
   }
   .art9 {
-    position: absolute;
-    top: -10rem;
-    right: 10rem;
+    @include art(absolute, -10rem, 10rem, auto, auto);
   }
 }
