--- a/src/pages/home/components/OurWorks/style.module.scss
+++ b/src/pages/home/components/OurWorks/style.module.scss
@@ -1,4 +1,5 @@
 @import '@/assets/scss/variables';
+@import '@/assets/scss/extends';
 
 .ourWorks {
   margin: 12rem auto 0;
@@ -36,11 +37,10 @@
       figure {
         text-align: center;
         img {
+          @extend .image-fit;
           width: 175px;
           height: 175px;
           margin: 3rem auto;
-          object-fit: contain;
-          object-position: center;
           text-align: center;
         }
       }
