--- a/src/pages/works/components/Clients/style.module.scss
+++ b/src/pages/works/components/Clients/style.module.scss
@@ -1,4 +1,5 @@
 @import '@/assets/scss/variables';
+@import '@/assets/scss/extends';
 
 .clients {
   margin: 10rem auto;
@@ -22,9 +23,8 @@
         line-height: 1.5rem;
       }
       .details {
+        @extend .flex-centered;
         margin-top: 2rem;
-        display: flex;
-        align-items: center;
         gap: 2rem;
         img {
           width: 2.5rem;
