--- a/src/pages/home/components/AboutUs/style.module.scss
+++ b/src/pages/home/components/AboutUs/style.module.scss
@@ -10,7 +10,7 @@
     height: 100%;
     width: 100%;
     top: 0;
-    background: #FFD035;
+    background: $yellow;
     transform: rotate(-3.3deg);
     padding: 0 10rem;
     margin: 2rem -10rem 0;
@@ -46,6 +46,14 @@
       p {
         font-size: 1.5rem;
       }
+    }
+  }
+
+  h1, h2, p {
+    overflow: hidden;
+    span {
+      display: inline-block;
+      transform: translateY(100%);
     }
   }
 
