--- a/src/pages/home/components/AboutUs/style.module.scss
+++ b/src/pages/home/components/AboutUs/style.module.scss
@@ -36,11 +36,14 @@
       flex: 1;
       padding: 0 2rem;
       h1 {
-        margin: 0 0 4rem 5rem;
+        margin: 0 0 0 5rem;
         font-size: 3rem;
         font-weight: 500;
         font-family: $spaceGrotesk;
         color: $black;
+        &:last-child {
+          margin-bottom: 4rem;
+        }
       }
 
       p {
